<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/border"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/display_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/text_to_display"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:hint="@string/display_text_hint"
        android:padding="5dp"
        android:singleLine="false"
        android:textAlignment="textStart"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/draw_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/text_to_display"
        android:layout_below="@+id/text_to_display"
        android:layout_marginTop="10dp"
        android:text="@string/draw_text" />

    <Button
        android:id="@+id/clear_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_to_display"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/draw_text_button"
        android:text="@string/clear_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/clear_text_button"
        android:layout_marginTop="17dp"
        android:text="@string/text_visibility"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioButton
        android:id="@+id/show_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:checked="true"
        android:text="@string/show_text" />

    <RadioButton
        android:id="@+id/hide_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_text_button"
        android:layout_marginStart="30dp"
        android:checked="false"
        android:text="@string/hide_text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/hide_text_button"
        android:layout_marginTop="17dp"
        android:text="@string/text_size"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/text_size_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hide_text_button"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@+id/textView3"
        android:entries="@array/text_sizes"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_size_spinner"
        android:layout_marginTop="17dp"
        android:text="@string/text_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/text_color_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_size_spinner"
        android:layout_below="@+id/text_size_spinner"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@+id/textView4"
        android:entries="@array/text_colors"
        android:spinnerMode="dropdown" />

</RelativeLayout>